connect whatsapp link

--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -17,7 +17,7 @@
                         <li>
                             <a href="#">Links</a>
                             <ul>
-                                <li><a href="tel:#"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
+                                <li><a href=" https://wa.me/9778073408" target="_blank"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
                                 <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist</a></li>
                                 <li><a href="/about">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
