--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -57,7 +57,7 @@
                                             <p><span class="text-primary">State:</span> <%= address.state %></p>
                                             <p><span class="text-primary">Pin Code:</span> <%= address.pincode %></p>
                                             <br>
-                                            <p><a href="/edit-address/<%= address._id %>" >Edit Address <i class="icon-edit"></i></a></p> 
+                                            <!-- <p><a href="/edit-address/<%= address._id %>" >Edit Address <i class="icon-edit"></i></a></p>  -->
                                         </div><!-- End .card-body -->
                                     </div><!-- End .card-dashboard -->
                                 </div>
