--- a/views/users/disCoupons.ejs
+++ b/views/users/disCoupons.ejs
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     <% }else{ %> 
-                        <h3>No Coupons</h3>
+                        <h3>Coupons is not Available</h3>
                     <% } %>
                     <% }) %>
                 </div>
