--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -107,6 +107,30 @@
                         <button class="btn-primary text-center" style="border: none;"><a class="text-white" href="/all-products">Order new product</a></button>
                         <h3 class="text-primary text-center ">No Orders</h3>
                     <% } %> 
+
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination justify-content-center">
+                            <% if (currentPage > 1) { %>
+                                <li class="page-item ">
+                                    <a class="page-link page-link-prev" href="?page=<%= currentPage - 1 %>" aria-label="Previous"  aria-disabled="true">
+                                        <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
+                                    </a>
+                                </li>
+                            <% } %>
+                            <% for (let i = 1 ; i<= totalPages; i++) { %>
+                                <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                                    <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                                </li>
+                            <% } %>
+                            <% if (currentPage < totalPages) { %>
+                                <li class="page-item">
+                                    <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next" >
+                                        Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
+                                    </a>
+                                </li>
+                            <% } %>
+                        </ul>
+                    </nav>
                 </div>    
 
 
