--- a/views/admin/layout/topnav.ejs
+++ b/views/admin/layout/topnav.ejs
@@ -159,16 +159,16 @@
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="profileDropdown">
             <h6 class="p-3 mb-0">Profile</h6>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item preview-item">
+            <!-- <a class="dropdown-item preview-item">
               <div class="preview-thumbnail">
                 <div class="preview-icon bg-dark rounded-circle">
                   <i class="mdi mdi-settings text-success"></i>
                 </div>
               </div>
-              <div class="preview-item-content">
+               <div class="preview-item-content">
                 <p class="preview-subject mb-1">Settings</p>
-              </div>
-            </a>
+              </div> 
+            </a> -->
             <div class="dropdown-divider"></div>
             <a href="/admin/logout" class="dropdown-item preview-item">
               <div class="preview-thumbnail">
@@ -181,7 +181,7 @@
               </div>
             </a>
             <div class="dropdown-divider"></div>
-            <p class="p-3 mb-0 text-center">Advanced settings</p>
+            <!-- <p class="p-3 mb-0 text-center">Advanced settings</p> -->
           </div>
         </li>
       </ul>
