--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -306,7 +306,9 @@
                     title: 'Payment has failed',
                     showConfirmButton: false,
                     timer: 1500,
-                });
+                }).then(() =>{
+                    window.location.href = '/orders';
+                })
             }
         })
         .catch(error => {
@@ -315,7 +317,9 @@
                 icon: 'error',
                 title: 'An error occurred',
                 text: 'Please try again later.',
-            });
+            }).then(() =>{
+                    window.location.href = '/orders';
+            })
         });
     }
 
